<resources>
    <string name="app_name">Learn</string>
    <string name="dark">Dark Mode</string>
    <string name="light">Light Mode</string>
    <string name="welcome_note">Hello, Welcome to the App - created by Suvam Naskar</string>
    <string name="go_back">Go Back</string>
    <string name="theme">Change Theme</string>

    <string name="webBrowserBtn">View in browser</string>
    <string name="webInAppBtn">View in App</string>
    <string name="cameraBtn">Camera</string>

    <string name="splash_image_desc">Image of Suvam Naskar</string>
</resources>